fixes #1815 patch-series-riahi/
From: spiga <spiga@cern.ch>


git-svn-id: svn+ssh://svn.cern.ch/reps/CMSDMWM/AsyncStageout/trunk@13099 4525493e-7705-40b1-a816-d608a930855b

--- a/src/couchapp/monitor/_attachments/njobDS.html
+++ b/src/couchapp/monitor/_attachments/njobDS.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Asynctransfert Monitor System</title>
+    <title>AsyncTransfer Monitor System</title>
     <link rel="stylesheet" href="style/main.css" type="text/css">
     <script src="vendor/protovis/protovis-r3.2.js"></script>
     <script src="vendor/couchapp/loader.js"></script>
@@ -10,7 +10,7 @@
   </head>
   <body>
   <div id="main">
-    <div id="head"><h2>Asynctransfer Monitor System</h2></div>
+    <div id="head"><h2>AsyncTransfer Monitor System</h2></div>
     
     <div id="sidebar"><p></p></div>
     <div id="items"></div>
