--- a/src/couchapp/monitor/evently/groupByUser/_init/mustache.html
+++ b/src/couchapp/monitor/evently/groupByUser/_init/mustache.html
@@ -1,5 +1,5 @@
 <div style="text-align: center">
-<h3>File transfert gruped by User</h3>
+<h3>File transfer grouped by User</h3>
 <br />
 <INPUT TYPE="button" NAME="buttonb" Value="View bar" onClick='setChart(1)'>
 <INPUT TYPE="button" NAME="buttonp" Value="View pie" onClick='setChart(2)'>
