--- a/src/couchapp/monitor/_attachments/index.html
+++ b/src/couchapp/monitor/_attachments/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Asynctransfert Monitor System</title>
+    <title>AsyncTransfer Monitor System</title>
     <link rel="stylesheet" href="style/main.css" type="text/css">
     <script language="JavaScript" src="calendar_db.js"></script>
 	<link rel="stylesheet" href="calendar.css">
@@ -9,7 +9,7 @@
   </head>
   <body>
   <div id="main">
-    <div id="head"><h2>Asynctransfer Monitor System</h2></div>
+    <div id="head"><h2>AsyncTransfer Monitor System</h2></div>
     
     
     <div id="sidebar"><p></p></div>
