--- a/src/couchapp/monitor/evently/head/_init/mustache.html
+++ b/src/couchapp/monitor/evently/head/_init/mustache.html
@@ -1,6 +1,6 @@
 <table width=100%>
  <tr>
   <td width=25% align=center><img src="img/CMS.gif" alt="CMS logo"></td>
-  <td width=75% ><h1 align=left>Asynctransfer Monitor System</h1></td>
+  <td width=75% ><h1 align=left>AsyncTransfer Monitor System</h1></td>
  </tr>
 </table>
