Add Kill/Resubmit to other views of the monitoring

--- a/src/couchapp/monitor/_attachments/index.html
+++ b/src/couchapp/monitor/_attachments/index.html
@@ -65,24 +65,19 @@
 	<a>&nbsp;&nbsp;End Date&nbsp;</a>
 	<input type="text" name="testinput2" id="end" />
 	<script language="JavaScript">
-//	var A_CALTPL = {
-//		'months' : ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'],
-//		'weekdays' : ['do', 'lu', 'ma', 'mi', 'ju', 'vi', 'sa'],
-//		'yearscroll': true,
-//		'weekstart': 0,
-//		'centyear'  : 70,
-//		'imgpath' : 'img/'
-//	}
+	var A_CALTPL = {
+		'months' : ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'],
+		'weekdays' : ['do', 'lu', 'ma', 'mi', 'ju', 'vi', 'sa'],
+		'yearscroll': true,
+		'weekstart': 0,
+		'centyear'  : 70,
+		'imgpath' : 'img/'
+	}
 	
 	new tcal ({
 		// if referenced by ID then form name is not required
 		'controlname': 'end'
-//	}, A_CALTPL);
-        });
-
-        tcal.a_tpl.yearscroll = false;
-        tcal.a_tpl.weekstart = 1;
-
+	}, A_CALTPL);
 	</script>
 	<a>End Time</a>
 	<select id="endtime">
@@ -117,20 +112,17 @@
 
 
 	</form>	
-
-<h3>Status of Active Jobs</h3>
+	
+<h3>Status of Active Files</h3>
 <div id="started"> Retriving Data... </div>
 <br>
-<h3>Status of Active Jobs</h3>
+<h3>Status of Ended Files</h3>
 <div id="ended"> Retriving Data... </div>
 <br>
-<h3>Status of Killed Jobs</h3>
+<h3>Status of Killed and Resubmitted Jobs</h3>
 <div id="killed"> Retriving Data... </div>
 <br>
-<h3>Status of Resubmitted Jobs</h3>
-<div id="resubmitted"> Retriving Data... </div>
-
-        </div>
+	</div>
 
   </div>
   </body>
@@ -145,7 +137,7 @@
   $.couch.app(function(app) {
     $("#sidebar").evently("menu", app);
     $("#head").evently("head", app);
-//    $("#items").evently("main", app);    
+    //$("#items").evently("main", app);    
   });
   
   $(document).ready(function() {
@@ -169,12 +161,13 @@ inputs.status = ["new","acquired"];
 inputes = [];
 inputes.data = [];
 inputes.stacked = [];
-inputes.status = ["killed"];
+inputes.status = ["resubmitted","killed"];
 
 inputess = [];
 inputess.data = [];
 inputess.stacked = [];
 inputess.status = ["resubmitted"];
+
 
 var startd = new Date();
 var endd = new Date();
@@ -225,10 +218,12 @@ inpute.popolate = function(){
 			var tslice = new Date(startd);
 			var donefile = [];
 			var failfile = [];
+			var killfile=[];
 			for(i=0; i<=hours; i++){
 			
 			var key = [tslice.getUTCFullYear(), tslice.getUTCMonth()+1, tslice.getUTCDate(), tslice.getUTCHours()];
 			//alert(key.toString());
+			var killF = {"time": tslice.getUTCMonth()+1+"/"+tslice.getUTCDate()+" "+tslice.getUTCHours()+":00","value": 0};
 			var doneF = {"time": tslice.getUTCMonth()+1+"/"+tslice.getUTCDate()+" "+tslice.getUTCHours()+":00",
 				"value": 0};
 			var failF = {"time": tslice.getUTCMonth()+1+"/"+tslice.getUTCDate()+" "+tslice.getUTCHours()+":00",
@@ -239,6 +234,7 @@ inpute.popolate = function(){
 				failF.value= response[rs].value.failed;
 				rs = rs+1;
 			}
+			
 			donefile.push(doneF);
 			failfile.push(failF);
 			tslice.setHours(tslice.getHours()+1);	
@@ -271,14 +267,12 @@ inputs.popolate = function(){
 				"value": 0};
 			
 			if((rs<response.length)&&(key.toString() == response[rs].key.toString())){
-
-				acqF.value= response[rs].value.acquired;
 				newF.value= response[rs].value.new;
+				acqF.value= response[rs].value.acquired;
 				rs = rs+1;
 			}
-
-			acqfile.push(acqF);
 			newfile.push(newF);
+			acqfile.push(acqF);
 			tslice.setHours(tslice.getHours()+1);	
 			}
 		inputs.stacked.push(newfile);
@@ -309,15 +303,15 @@ inputes.popolate = function(){
                         
                         if((rs<response.length)&&(key.toString() == response[rs].key.toString())){
                                 killF.value= response[rs].value.killed;
-                                empF.value=0;
-                                    rs = rs+1;
+                                empF.value=response[rs].value.resubmitted;
+				    rs = rs+1;
                         }
-                        empfile.push(empF);
+			empfile.push(empF);
                         killfile.push(killF);
                         tslice.setHours(tslice.getHours()+1);   
                         }
-    inputes.stacked.push(empfile);      
     inputes.stacked.push(killfile);
+    inputes.stacked.push(empfile); 	
 }
 
 inputess.popolate = function(){
@@ -362,14 +356,13 @@ function drawchart(){
 		calcInterval();
 	}
 	inputs.popolate();
-        inputes.popolate();
-        inpute.popolate();
-        inputess.popolate();    
+	inputes.popolate();
+	inpute.popolate();
+	inputess.popolate();	
 
     setTimeout(function() stackedArea("started", inputs) , 1000 );
     setTimeout(function() stackedArea("killed", inputes) , 1000 );
-    setTimeout(function() stackedArea("ended", inpute) , 1000 );        
-    setTimeout(function() stackedArea("resubmitted", inputess) , 1000 );
+    setTimeout(function() stackedArea("ended", inpute) , 1000 );	
 }
 
 
@@ -377,3 +370,4 @@ function drawchart(){
 
 
 </html>
+
