--- a/src/couchapp/monitor/evently/destsourcetime/_init/mustache.html
+++ b/src/couchapp/monitor/evently/destsourcetime/_init/mustache.html
@@ -97,7 +97,7 @@
 
 
 	</form>
-<h3>Status of Active Job</h3>
+<h3>Status of Active Files</h3>
 <div id="startedd"> Retriving Data... </div>
 <h3>Status of Ended Files</h3>
 <div id="endedd"> Retriving Data... </div>
