--- a/src/couchapp/monitor/evently/groupByUser/_init/mustache.html
+++ b/src/couchapp/monitor/evently/groupByUser/_init/mustache.html
@@ -22,7 +22,7 @@ input.data = [];
 input.labels = [];
 input.info = [];
 input.stacked = [];
-input.status = ["done","failed","other"];
+input.status = ["done","failed","killed","new", "acquired", "resubmitted"];
 
 
 input.popolate = function(){
@@ -33,19 +33,26 @@ input.popolate = function(){
                 var donefile = [];
 		var failfile = [];
 		var otherfile = [];
-		
+		var killfile = [];
+		var newfile=[];
+		var resubfile=[];
+		var acqfile=[];			
+
+	
 		xmlhttp = new XMLHttpRequest();
-//  		xmlhttp.open("GET", "_view/filesCountByUser?group_level=1?stale=ok", false);
-                xmlhttp.open("GET", "_view/filesCountByUser?group_level=1", false);
+  		xmlhttp.open("GET", "_view/filesCountByUser?group_level=1", false);
   		xmlhttp.send();
                 var response = eval("(" + xmlhttp.responseText + ")")["rows"];
 		for (i in response) {
 		var value = response[i].value.total;
-		var rowinfo = "Done: "+response[i].value.done+" Failed: "+response[i].value.failed+" Other: "+response[i].value.other;
+		var rowinfo = "Done: "+response[i].value.done+" Failed: "+response[i].value.failed+" New: "+response[i].value.new+" Killed: "+response[i].value.killed+" Acquired: "+response[i].value.acquired+" Resubmitted: "+response[i].value.resubmitted ;
 
 		donefile.push(response[i].value.done);
 		failfile.push(response[i].value.failed);
-		otherfile.push(response[i].value.other);
+		newfile.push(response[i].value.new);
+		killfile.push(response[i].value.killed);
+	        acqfile.push(response[i].value.acquired);
+		resubfile.push(response[i].value.resubmitted);			
 		input.labels.push(response[i].key);
 		input.data.push(value);
 		input.info.push(rowinfo);
@@ -53,7 +60,10 @@ input.popolate = function(){
 
 		input.stacked.push(donefile);
 		input.stacked.push(failfile);
-		input.stacked.push(otherfile);
+		input.stacked.push(killfile);
+		input.stacked.push(newfile);
+		input.stacked.push(acqfile);
+		input.stacked.push(resubfile);
 }
 
 
@@ -61,7 +71,6 @@ input.update = function(){
 		var DB = $.couch.db(dbname);
 		DB.view('monitor/filesCountByUser', { 
 		      group_level: 1,
-//                      stale: "ok",
 		      success: function(data) {
 				var labels = [];
 				var dati = [];
