--- a/src/couchapp/monitor/evently/userStat/_init/mustache.html
+++ b/src/couchapp/monitor/evently/userStat/_init/mustache.html
@@ -2,13 +2,11 @@
 <h3 id="title"></h3>
 <table>
 	<tr>
-		<td><h4>JOB STATUS</h4></td>
-		<td><h4>WORKFLOW</h4></td>
-	</tr>
+		<td><h4>FILES STATUS BY WORKFLOW</h4></td>
+			</tr>
 		<tr>
 		<td><div id="pie"></div> </td>
-		<td><div id="pie2"></div> </td>
-	</tr>
+			</tr>
 </table>
 </div>
 
@@ -49,6 +47,15 @@ input.dataop = [];
 input.dataip = [];
 input.status = ["done","failed","other"];
 
+var inputs = [];
+inputs.url = url+"/workflowStat.html";
+inputs.data = [];
+inputs.labels = [];
+inputs.info = [];
+inputs.stacked = [];
+inputs.layers = ["done","failed","killed","new", "acquired", "resubmitted"];inputs.status = ["done","failed","killed", "new", "acquired", "resubmitted"];
+
+
 function settotdata(intotdata, inouterpie, ininnerpies, inkeys){
         input.totdata = intotdata;
 	input.dataop = inouterpie;
@@ -69,10 +76,10 @@ input.updateTot = function(){
                                 var totdata = [0,0,0];
 				var outerpie = [];
 				var innerpies = [];
-				var keys = [];					
+				var keys = [];
 
 		      		for (i in data.rows) {
-		                        
+
 					var value = data.rows[i].value.total;
 		                        //var outerpieinfo = {"key" : data.rows[i].key[1],
   					//		     "value": data.rows[i].value.total}
@@ -93,11 +100,55 @@ input.updateTot = function(){
 	      });
 }
 
+inputs.popolate = function(){
+                inputs.stacked = [];
+                inputs.data = [];
+                inputs.labels = [];
+                inputs.info = [];
+                var donefile = [];
+                var failfile = [];
+                var killfile=[];
+                var newfile = [];
+                var acqfile = [];
+                var resubfile=[];
+
+                xmlhttp = new XMLHttpRequest();
+                xmlhttp.open("GET", "_view/filesCountByTask?group_level=2", false);
+                xmlhttp.send();
+                var response = eval("(" + xmlhttp.responseText + ")")["rows"];
+                for (i in response) {
+                var value = response[i].value.total;
+                var rowinfo = "WorkFlow: "+response[i].key+" Jobs: "+response[i].value.total;
+
+
+//                if (response[i].value.user==user){
+
+                if (response[i].key[1]==user){
+                donefile.push(response[i].value.done);
+                failfile.push(response[i].value.failed);
+                newfile.push(response[i].value.new);
+                killfile.push(response[i].value.killed);
+                resubfile.push(response[i].value.resubmitted);
+                acqfile.push(response[i].value.acquired);
+
+                inputs.labels.push(response[i].key[0]);
+                inputs.data.push(value);
+                inputs.info.push(rowinfo);
+                }        }
+                inputs.stacked.push(donefile);
+                inputs.stacked.push(failfile);
+                inputs.stacked.push(killfile);
+                inputs.stacked.push(newfile);
+                inputs.stacked.push(acqfile);
+                inputs.stacked.push(resubfile);
+
+}
 
 function drawchart(){
 	input.updateTot();
-        setTimeout(function() simpleActivePie("pie", input) , 500 );
-        setTimeout(function() doublepie("pie2", input) , 500 );
+        inputs.popolate();
+        setTimeout(function() stackedBarH("pie", inputs) , 500 );
+        /*setTimeout(function() doublepie("pie2", input) , 500 );*/
 }
 
 drawchart();
