--- a/src/couchapp/monitor/evently/destsourcetime/_init/mustache.html
+++ b/src/couchapp/monitor/evently/destsourcetime/_init/mustache.html
@@ -13,11 +13,11 @@
 		// input name
 		'controlname': 'start'
 	});
-	
+
 	// individual template parameters can be modified via the calendar variable
 	o_cal.a_tpl.yearscroll = false;
 	o_cal.a_tpl.weekstart = 1;
-	
+
 	</script>
 	<a>Start Time</a>
 	<select id="starttime">
@@ -58,7 +58,7 @@
 		'centyear'  : 70,
 		'imgpath' : 'img/'
 	}
-	
+
 	new tcal ({
 		// if referenced by ID then form name is not required
 		'controlname': 'end'
@@ -91,7 +91,7 @@
   		<option value="22">22:00</option>
   		<option value="23">23:00</option>
 	</select>
-	
+
 	<INPUT TYPE="button" NAME="button" Value="View" onClick='setTime($("input#start").val(),$("input#end").val())'>
 	<INPUT TYPE="button" NAME="buttonreset" Value="Default" onClick='resetTime()'>
 
@@ -174,16 +174,16 @@ function setTime(start, end){
 			}else{
 				startd = startdate;
 				endd = enddate;
-				
+
 				}
 				defaultTime = false;
 				drawchart();
 			}
-			
+
 function resetTime(){
 	defaultTime = true;
 	drawchart();
-	
+
 	}
 
 function calcInterval(){
@@ -193,7 +193,7 @@ function calcInterval(){
     start.setDate(start.getDate()-1);
 	startd = start;
 	endd = now;
-	
+
 	}
 
 
@@ -204,7 +204,7 @@ inputes.popolate = function(){
 		var startkey =  ['"'+src+'"', startd.getUTCFullYear(), startd.getUTCMonth()+1, startd.getUTCDate(), startd.getUTCHours()];
 			var endkey = ['"'+src+'"', endd.getUTCFullYear(), endd.getUTCMonth()+1, endd.getUTCDate(), endd.getUTCHours()];
 			xmlhttp = new XMLHttpRequest();
-  			xmlhttp.open("GET", "_view/endedByTimeSource?group_level=4&startkey=[" + startkey + "]&endkey=[" + endkey + "]", false);
+  			xmlhttp.open("GET", "_view/endedByTimeSource?stale=ok&group_level=4&startkey=[" + startkey + "]&endkey=[" + endkey + "]", false);
   			xmlhttp.send();
                 	var response = eval("(" + xmlhttp.responseText + ")")["rows"];
 			var rs = 0;
@@ -212,14 +212,14 @@ inputes.popolate = function(){
 			var donefile = [];
 			var failfile = [];
 			for(i=0; i<=hours; i++){
-			
+
 			var key = ['"'+src+'"', tslice.getUTCFullYear(), tslice.getUTCMonth()+1, tslice.getUTCDate(), tslice.getUTCHours()];
 			//alert(key.toString());
 			var doneF = {"time": tslice.getUTCMonth()+1+"/"+tslice.getUTCDate()+" "+tslice.getUTCHours()+":00",
 				"value": 0};
 			var failF = {"time": tslice.getUTCMonth()+1+"/"+tslice.getUTCDate()+" "+tslice.getUTCHours()+":00",
 				"value": 0};
-			
+
 			if((rs<response.length)&&(key.toString() == response[rs].key.toString())){
 				console.log(key);
 				console.log(response[rs].key);
@@ -229,7 +229,7 @@ inputes.popolate = function(){
 			}
 			donefile.push(doneF);
 			failfile.push(failF);
-			tslice.setHours(tslice.getHours()+1);	
+			tslice.setHours(tslice.getHours()+1);
 			}
 		inputes.stacked.push(donefile);
 		inputes.stacked.push(failfile);
@@ -242,7 +242,7 @@ inputss.popolate = function(){
 			var startkey =  ['"'+src+'"', startd.getUTCFullYear(), startd.getUTCMonth()+1, startd.getUTCDate(), startd.getUTCHours()];
 			var endkey = ['"'+src+'"', endd.getUTCFullYear(), endd.getUTCMonth()+1, endd.getUTCDate(), endd.getUTCHours()];
 			xmlhttp = new XMLHttpRequest();
-  			xmlhttp.open("GET", "_view/startedByTimeSource?group_level=4&startkey=[" + startkey + "]&endkey=[" + endkey + "]", false);
+  			xmlhttp.open("GET", "_view/startedByTimeSource?stale=ok&group_level=4&startkey=[" + startkey + "]&endkey=[" + endkey + "]", false);
   			xmlhttp.send();
                 	var response = eval("(" + xmlhttp.responseText + ")")["rows"];
 			var rs = 0;
@@ -250,14 +250,14 @@ inputss.popolate = function(){
 			var newfile = [];
 			var acqfile = [];
 			for(i=0; i<=hours; i++){
-			
+
 			var key = ['"'+src+'"', tslice.getUTCFullYear(), tslice.getUTCMonth()+1, tslice.getUTCDate(), tslice.getUTCHours()];
 			//alert(key.toString());
 			var newF = {"time": tslice.getUTCMonth()+1+"/"+tslice.getUTCDate()+" "+tslice.getUTCHours()+":00",
 				"value": 0};
 			var acqF = {"time": tslice.getUTCMonth()+1+"/"+tslice.getUTCDate()+" "+tslice.getUTCHours()+":00",
 				"value": 0};
-			
+
 			if((rs<response.length)&&(key.toString() == response[rs].key.toString())){
 				console.log(key);
 				console.log(response[rs].key);
@@ -267,7 +267,7 @@ inputss.popolate = function(){
 			}
 			newfile.push(newF);
 			acqfile.push(acqF);
-			tslice.setHours(tslice.getHours()+1);	
+			tslice.setHours(tslice.getHours()+1);
 			}
 		inputss.stacked.push(newfile);
 		inputss.stacked.push(acqfile);
@@ -281,7 +281,7 @@ inputed.popolate = function(){
 		var startkey =  ['"'+dest+'"', startd.getUTCFullYear(), startd.getUTCMonth()+1, startd.getUTCDate(), startd.getUTCHours()];
 			var endkey = ['"'+dest+'"', endd.getUTCFullYear(), endd.getUTCMonth()+1, endd.getUTCDate(), endd.getUTCHours()];
 			xmlhttp = new XMLHttpRequest();
-  			xmlhttp.open("GET", "_view/endedByTimeDest?group_level=4&startkey=[" + startkey + "]&endkey=[" + endkey + "]", false);
+  			xmlhttp.open("GET", "_view/endedByTimeDest?stale=ok&group_level=4&startkey=[" + startkey + "]&endkey=[" + endkey + "]", false);
   			xmlhttp.send();
                 	var response = eval("(" + xmlhttp.responseText + ")")["rows"];
 			var rs = 0;
@@ -289,14 +289,14 @@ inputed.popolate = function(){
 			var donefile = [];
 			var failfile = [];
 			for(i=0; i<=hours; i++){
-			
+
 			var key = ['"'+dest+'"', tslice.getUTCFullYear(), tslice.getUTCMonth()+1, tslice.getUTCDate(), tslice.getUTCHours()];
 			//alert(key.toString());
 			var doneF = {"time": tslice.getUTCMonth()+1+"/"+tslice.getUTCDate()+" "+tslice.getUTCHours()+":00",
 				"value": 0};
 			var failF = {"time": tslice.getUTCMonth()+1+"/"+tslice.getUTCDate()+" "+tslice.getUTCHours()+":00",
 				"value": 0};
-			
+
 			if((rs<response.length)&&(key.toString() == response[rs].key.toString())){
 				console.log(key);
 				console.log(response[rs].key);
@@ -306,7 +306,7 @@ inputed.popolate = function(){
 			}
 			donefile.push(doneF);
 			failfile.push(failF);
-			tslice.setHours(tslice.getHours()+1);	
+			tslice.setHours(tslice.getHours()+1);
 			}
 		inputed.stacked.push(donefile);
 		inputed.stacked.push(failfile);
@@ -320,7 +320,7 @@ inputsd.popolate = function(){
 			var startkey =  ['"'+dest+'"', startd.getUTCFullYear(), startd.getUTCMonth()+1, startd.getUTCDate(), startd.getUTCHours()];
 			var endkey = ['"'+dest+'"', endd.getUTCFullYear(), endd.getUTCMonth()+1, endd.getUTCDate(), endd.getUTCHours()];
 			xmlhttp = new XMLHttpRequest();
-  			xmlhttp.open("GET", "_view/startedByTimeDest?group_level=4&startkey=[" + startkey + "]&endkey=[" + endkey + "]", false);
+  			xmlhttp.open("GET", "_view/startedByTimeDest?stale=ok&group_level=4&startkey=[" + startkey + "]&endkey=[" + endkey + "]", false);
   			xmlhttp.send();
                 	var response = eval("(" + xmlhttp.responseText + ")")["rows"];
 			var rs = 0;
@@ -328,14 +328,14 @@ inputsd.popolate = function(){
 			var newfile = [];
 			var acqfile = [];
 			for(i=0; i<=hours; i++){
-			
+
 			var key = ['"'+dest+'"', tslice.getUTCFullYear(), tslice.getUTCMonth()+1, tslice.getUTCDate(), tslice.getUTCHours()];
 			//alert(key.toString());
 			var newF = {"time": tslice.getUTCMonth()+1+"/"+tslice.getUTCDate()+" "+tslice.getUTCHours()+":00",
 				"value": 0};
 			var acqF = {"time": tslice.getUTCMonth()+1+"/"+tslice.getUTCDate()+" "+tslice.getUTCHours()+":00",
 				"value": 0};
-			
+
 			if((rs<response.length)&&(key.toString() == response[rs].key.toString())){
 				console.log(key);
 				console.log(response[rs].key);
@@ -345,7 +345,7 @@ inputsd.popolate = function(){
 			}
 			newfile.push(newF);
 			acqfile.push(acqF);
-			tslice.setHours(tslice.getHours()+1);	
+			tslice.setHours(tslice.getHours()+1);
 			}
 		inputsd.stacked.push(newfile);
 		inputsd.stacked.push(acqfile);
