--- a/src/couchapp/monitor/_attachments/index.html
+++ b/src/couchapp/monitor/_attachments/index.html
@@ -205,7 +205,7 @@ inpute.popolate = function(){
 		var startkey =  [startd.getUTCFullYear(), startd.getUTCMonth()+1, startd.getUTCDate(), startd.getUTCHours()];
 			var endkey = [endd.getUTCFullYear(), endd.getUTCMonth()+1, endd.getUTCDate(), endd.getUTCHours()];
 			xmlhttp = new XMLHttpRequest();
-  			xmlhttp.open("GET", "_view/endedByTime?group_level=4&startkey=[" + startkey + "]&endkey=[" + endkey + "]", false);
+  			xmlhttp.open("GET", "_view/endedByTime?stale=ok&group_level=4&startkey=[" + startkey + "]&endkey=[" + endkey + "]", false);
   			xmlhttp.send();
                 	var response = eval("(" + xmlhttp.responseText + ")")["rows"];
 			var rs = 0;
@@ -244,7 +244,7 @@ inputs.popolate = function(){
 			var startkey =  [startd.getUTCFullYear(), startd.getUTCMonth()+1, startd.getUTCDate(), startd.getUTCHours()];
 			var endkey = [endd.getUTCFullYear(), endd.getUTCMonth()+1, endd.getUTCDate(), endd.getUTCHours()];
 			xmlhttp = new XMLHttpRequest();
-  			xmlhttp.open("GET", "_view/startedByTime?group_level=4&startkey=[" + startkey + "]&endkey=[" + endkey + "]", false);
+  			xmlhttp.open("GET", "_view/startedByTime?stale=ok&group_level=4&startkey=[" + startkey + "]&endkey=[" + endkey + "]", false);
   			xmlhttp.send();
                 	var response = eval("(" + xmlhttp.responseText + ")")["rows"];
 			var rs = 0;
@@ -280,7 +280,7 @@ inputes.popolate = function(){
                 var startkey =  [startd.getUTCFullYear(), startd.getUTCMonth()+1, startd.getUTCDate(), startd.getUTCHours()];
                 var endkey = [endd.getUTCFullYear(), endd.getUTCMonth()+1, endd.getUTCDate(), endd.getUTCHours()];
                         xmlhttp = new XMLHttpRequest();
-                        xmlhttp.open("GET", "_view/endedByTime?group_level=4&startkey=[" + startkey + "]&endkey=[" + endkey +"]", false);
+                        xmlhttp.open("GET", "_view/endedByTime?stale=ok&group_level=4&startkey=[" + startkey + "]&endkey=[" + endkey +"]", false);
                         xmlhttp.send();
                         var response = eval("(" + xmlhttp.responseText + ")")["rows"];
                         var rs = 0;
